--- a/EFCoreRelationShips/appsettings.json
+++ b/EFCoreRelationShips/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+"ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-5E5F5F5F-5E5F-5F5E-5F5F-5F5F5F5F5F5F;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
